--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -398,10 +398,11 @@ exec --no-startup-id ~/.screenlayout/monitor.sh
 exec --no-startup-id sleep 1 && feh --bg-fill /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
 
 # set powersavings for display:
-exec --no-startup-id xset s 480 dpms 600 600 600
+# exec --no-startup-id xset s 480 dpms 600 600 600
 
 # disable power saving (for example if using xscreensaver)
-# exec --no-startup-id xset -dpms
+exec --no-startup-id xset s off
+exec --no-startup-id xset -dpms
 
 # use xautolock to use autosuspend rules for mobile devices
 # https://wiki.archlinux.org/title/Session_lock#xautolock
@@ -445,7 +446,9 @@ exec --no-startup-id nm-applet
 
 # exec --no-startup-id sleep 2 && kitty
 exec --no-startup-id /usr/bin/megasync
-exec --no-startup-id i3-msg "workspace $ws9; exec /usr/bin/pavucontrol; exec /usr/bin/blueman-manager"
+# exec --no-startup-id i3-msg "workspace $ws9; exec /usr/bin/pavucontrol"
+# exec --no-startup-id i3-msg "workspace $ws9; exec /usr/bin/blueman-manager"
+exec --no-startup-id fcitx5
 
 # clipman-applet
 #exec --no-startup-id xfce4-clipman
