--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -289,7 +289,8 @@ bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
 
 ## App shortcuts
 bindsym $mod+w exec --no-startup-id /usr/bin/firefox
-bindsym $mod+n exec --no-startup-id /usr/bin/thunar
+bindsym $mod+v exec --no-startup-id kitty nvim
+bindsym $mod+x exec --no-startup-id /usr/bin/thunar
 bindsym Print exec --no-startup-id scrot ~/pictures/screenshots/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/pictures/screenshots/$(date +"%Y-%m-%d-%T")-screenshot.png"
 
 # Power Profiles menu switcher (rofi)
