--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -285,11 +285,12 @@ bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Redirect sound to headphones
-bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
+# bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
 
 ## App shortcuts
+bindsym $mod+p exec --no-startup-id /usr/bin/sioyek
 bindsym $mod+w exec --no-startup-id /usr/bin/firefox
-bindsym $mod+v exec --no-startup-id kitty nvim
+bindsym $mod+v exec --no-startup-id /usr/bin/kitty nvim
 bindsym $mod+x exec --no-startup-id /usr/bin/thunar
 bindsym Print exec --no-startup-id scrot ~/pictures/screenshots/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/pictures/screenshots/$(date +"%Y-%m-%d-%T")-screenshot.png"
 
