--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -288,6 +288,7 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 # bindsym $mod+p exec --no-startup-id /usr/local/bin/switch-audio-port
 
 ## App shortcuts
+bindsym $mod+n exec --no-startup-id /usr/bin/obsidian
 bindsym $mod+p exec --no-startup-id /usr/bin/sioyek
 bindsym $mod+w exec --no-startup-id /usr/bin/firefox
 bindsym $mod+v exec --no-startup-id /usr/bin/kitty nvim
